--- a/segundoBlazor/Client/Pages/Persona/Persona.razor
+++ b/segundoBlazor/Client/Pages/Persona/Persona.razor
@@ -24,6 +24,7 @@
            permitirReporteExcel=true
            permitirReportePdf=true
            tituloPdf="Personas"
+           permitirWord=true
          />
 
 @code {
