--- a/segundoBlazor/Client/Shared/FormularioTipoLibro.razor
+++ b/segundoBlazor/Client/Shared/FormularioTipoLibro.razor
@@ -5,7 +5,7 @@
 <EditForm Model="@otipoLibro" OnValidSubmit="guardarDatos">
 
     <DataAnnotationsValidator />
-    <ValidationSummary />
+    @*<ValidationSummary />*@
 
     <div class="form-group">
         <label>Id</label>
@@ -19,6 +19,7 @@
         <InputText class="form form-control"
                    
                    @bind-Value="otipoLibro.Nombretipolibro" />
+        <ValidationMessage For="@(()=>otipoLibro.Nombretipolibro)" />
     </div>
 
     <div class="form-group">
@@ -26,6 +27,7 @@
         <InputText class="form form-control"
                    
                    @bind-Value="otipoLibro.Descripcion" />
+        <ValidationMessage For="@(()=>otipoLibro.Descripcion)" />
     </div>
 
     <input type="submit" value="Guardar" class="btn btn-primary" />
